--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>wassup</h1>
+
     <form action="/submit" method="POST">
-        <label for="name">Name</label>
-        <input type="text" name="name" id="name" />
-        <input type="submit" value="Submit">
+      <label for="street">Street: <input type="text" name="street" /></label>
+      <label for="pet">Pet: <input type="text" name="pet" /></label>
+      <button type="submit">Submit</button>
     </form>
   </body>
 </html>
